--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ hr { color: black; background: black; }
 <h3>A legitimate "fanbase" site from 2019 to 2024.</h3>
 <br>
 <div id="announcement1" style="display: block;">
-<h2 style="color:yellow;">This website is in HTTPS protocol and we cannot afford to host them at this time. Unfortunately, but one of the archives that don't exist on GitHub and they are completely private from another place.</span></h2>
+<h2 style="color:yellow;">WARNING: This site will be replaced in December 31st, 2024 due to various reasons. When it's all replaced, all content will be still accessible from a different link before the day is over.</span></h2>
 <h1><a href="https://discord.gg/vUYjkCdDnU">Warsaw</a></h1>
 </div>
 <p>Hello, there's nothing to do with this site... and the bio! Please click these tabs to continue!</p>
@@ -191,7 +191,7 @@ Attention to TPOT 12 leakers, if you see the screen including Golf Ball and Cand
 <p>Samsung Galaxy S2 is the first device that I used in 2012. I used to play Fruit Ninja where the game was two years now and my oldest computer are two computers were running Windows XP operating system. I had so much memories from using this.<br>
 On late July 2024, I was thinking about my old laptop's operating system being stuck on Windows 10 for six years and it is extremely slow due to excessive amount of power outages but meanwhile in this operating system, opening the control panel crashes Windows Explorer, right-clicking on microphone shortly hangs, games don't work on modern 2010 hardware, Windows Error Reporting runs every single hour and bloated Windows 10 built-in applications running every day such as Microsoft Compatibility Telemetry, Device Census, sedsvc, Search and Runtime Broker. I have no options but I just turned off my WiFi connectivity to prevent any URL connection exposures. Once I get this installed, I will install Windows 7 Home Premium x86 pre-activated operating system, wipe the current drive, install it and it will be so much faster than this sucker from 2015. And what about drivers? I got three discs on my closet, the first disc is driver and utilities, second is manual and third is CyberLink applications.</p>
 <h2>What are you doing in the future?</h2>
-<p>Archiving myTeardrop versions before they came out and counting until I will take my entire site into nothingness, but as occasion.</p>
+<p>...</p>
 <iframe src="https://ezstat.ru/2RqKe7" width="1" height="1"></iframe>
 </div>
 
@@ -203,15 +203,15 @@ If you want to explore the nostalgia trip of my 2018 website, <a href="/firescho
 <br><br>
 <p>Oof, that was a long story. Back on early 2019, I started my first FTP server running on ES File Explorer in my middle school when I was 13 (as you have heard this app is being malicious by Play Protect). Nevertheless, this server is only temporary and it's running on my older phone "Sony Xperia M4 Aqua", but it didn't work very well. I changed a few hotspot names where the students can connect to my hotspot and search something nasty which they did not want to visit my FTP server acting as a web server, because I'm too dumb at hosting sites. It was called "FireSchoolDownload" by the way when I didn't learn the right skills of HTML. But in the bright side in mid-2018, I started learning HTML for a little bit, but as a 12-year old kid, my coding skills were too terrible for me.<br>
 Back on Late July 2019, I've been trying to host the server without any port forwards or tricks, but I also went into his Discord server to tell a person who is responsible of BWR ("BonziWORLD Revived") bringing the site back to life and two sites were the superiors; just like how Foodz and Seamus did it. I told him how to make a BonziWORLD server of myself without having to access the public site ever again. For most conflicts that Seamus did actually forget what to do; "port forwarding". The sunset is coming, time to sleep. That's a issue where I'm getting that I'm not forwarding to everyone. A few minutes later, I finally made this server up for everyone and now I can host anything whatever I want to.<br>
-In the end of November 2019, I made my first community called "OnuteWORLD" and the site's color is actually teal for top and bottom cards. There's wasn't an domain that has been linked to something else, but it has never implemented.
+In the end of November 2019, I made my first community called "[REDACTED]WORLD" and the site's color is actually teal for top and bottom cards. There's wasn't an domain that has been linked to something else, but it has never implemented.
 <br>
-When I got banned from bonzi.world (or bonzi.dega.io if you are sure), the ban reason says: "ONUTEWORLD? MORE LIKE GAYWORLD", so I got my own idea as my second site of BonziWORLD FE's prototype called as "FuckWORLD" with cuss words around the site. It was created in January 18th, 2020 as a joke after some Nathan's ridiculous ban, but later it was changed to an official chat site. It wasn't totally sure that FuckWORLD is a opposite thing for young children can visit the site and ruin their feelings by themselves from using this site, so I have decided to update it more for eight months of my work to turn into a final release of BonziWORLD FE. I'm skipping to two years of incomplete creation for BonziWORLD FE. I started to work BonziWORLD FE again with more skills as I possibly can. Every update is a "sometime marking" when not all the features will begin working and make it capable as a successful website without any detail to be added.
+When I got banned from bonzi.world (or bonzi.dega.io if you are sure), the unfair ban reason says: "[REDACTED]WORLD? MORE LIKE GAYWORLD", so I got my own idea as my second site of BonziWORLD FE's prototype called as "FuckWORLD" with cuss words around the site. It was created in January 18th, 2020 as a joke after some Nathan's ridiculous ban, but later it was changed to an official chat site. It wasn't totally sure that FuckWORLD is a opposite thing for young children can visit the site and ruin their feelings by themselves from using this site, so I have decided to update it more for eight months of my work to turn into a final release of BonziWORLD FE. I'm skipping to two years of incomplete creation for BonziWORLD FE. I started to work BonziWORLD FE again with more skills as I possibly can. Every update is a "sometime marking" when not all the features will begin working and make it capable as a successful website without any detail to be added.
 <br>
-Back in November 25th, 2023, the company name is now changed due to privacy reasons. "Onute" means "the owner" for what should be called for, and typically changing to "Hyper" as a very successful website name. The owner has tired of using its own past name where he doesn't want to hear from any person who are obsessed with my past name, remember to call "deadname". They are not so usable, but it can make anyone mad if someone uses the past name for nothing.
+Back in November 25th, 2023, the company name is now changed due to privacy reasons. "[REDACTED]" means "the owner" for what should be called for, and typically changing to "Hyper" as a very successful website name. The owner has tired of using its own past name where he doesn't want to hear from any person who are obsessed with my past name, remember to call "deadname". They are not so usable, but it can make anyone mad if someone uses the past name for nothing.
 <br>
 Today in May 16th, 2024, the new website layout has been changed.
 <br>
-After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" which it exactly consisted to be a third BonziWORLD site. In February 2nd, 2020, the things are getting worse now. When I flushed the toilet and went to my main computer for what I have been working on, I saw two people (Erik and Seamus) sitting in my third website asking me that I need to take it down, but I actually "refuse" to take my server down for what Seamus is saying. The footage can still be found <a href="https://www.youtube.com/watch?v=Ft-evp9wa0I" target="_blank">right here</a> and the rest of the logs that I have gathered by myself.
+After I made a clone of "BonziWORLD Revived", I renamed to "[REDACTED]WORLD Revived" which it exactly consisted to be a third BonziWORLD site. In February 2nd, 2020, the things are getting worse now. When I flushed the toilet and went to my main computer for what I have been working on, I saw two people (Erik and Seamus) sitting in my third website asking me that I need to take it down, but I actually "refuse" to take my server down for what Seamus is saying. The footage can still be found <a href="https://www.youtube.com/watch?v=Ft-evp9wa0I" target="_blank">right here</a> and the rest of the logs that I have gathered by myself.
 </div>
 
 <div id="Links" class="tabcontent">
@@ -243,11 +243,11 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <br><br>
 <img src="logo.svg" alt="HyperWorld - The Special Final Release" width="500px" id="logo">
 <p>New layout made by "THE OWNER OF HYPERWORLD". You are now on the GitHub version.</p>
-<p>All rights reserved. HyperWORLD Server Ltd. 2019-<span id="oYear"></span>.</p>
+<p>All rights reserved. HyperWORLD Server Ltd. 2019-2024.</p>
 <br>
 <p>Please note, this page was entirely hosted on Fastly's GitHub pages. There are no servers inside for this page. The actual page can be found on official HyperWORLD page which is now without GitHub.</p>
 <br>
-<h1>IF THERE'S AN INSIGNIFICANT IMPROVEMENT FOR THIS SITE, PLEASE CONTACT US <a href="mailto:danieliuspaulavicius@gmail.com">HERE</a>.</h1>
+<h1>IF THERE'S AN INSIGNIFICANT IMPROVEMENT FOR THIS SITE, PLEASE CONTACT US <del>HERE</del> (E-mails have been removed due to final countdown).</h1>
 <p>Please do not use this business e-mail. Just remember you don't use people's e-mails as long as you have a point.</p>
 <p><b>WARNING:</b> ANY LETTER THAT YOU SENT CONTAINS DISRESPECTFUL OR FREEDOM OF SPEECH WILL NOT BE TOLERATED AND WILL NOT BE READ BY THE OWNER. PLEASE TRY AGAIN FOR THE NEXT VERSION OF THE DAY.</p>
 <p>Thank you for understanding.</p>
@@ -270,9 +270,7 @@ function openPage(pageName,elmnt,color) {
 }
 
 document.getElementById("defaultOpen").click();
-
-document.getElementById("oYear").innerHTML = new Date().getFullYear();
-
+	
 window.addEventListener("load", () => {
   if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js");
