--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,7 @@ body { text-align: center; font-family: Tahoma, Arial, sans-serif; }
 <br>
 <p>And there is the rest of the links.</p>
 <br>
+<p>Want to join a old Discord server? <a href="http://discord.gg/DpBBJkBuzQ" target="_blank">Join here.</a> (and also don't post r34 or violence. do you want us to get banned on discord for you doing that? read the rules)</p>
 <p><a href="/fireschooldownload/Webpage.html">Nostalgia trip - FireSchoolDownload</a></p>
 <p><a href="phonemes.html">FakeYou phonemes</a></p>
 <p><a href="davidegan.html">David Egan Rant</a></p>
