--- a/encryption/new_converter.html
+++ b/encryption/new_converter.html
@@ -35,7 +35,7 @@ body { text-align: center; color: black; background: white; font-family: Eurosti
 <option value="uniEliminatorEncryption">Unicode Eliminator (decode only)</option>
 <option value="hEncryption">Letter H converter (decode only)</option>
 <option value="ltModeEncryption">Lithuanian Accent Encryption</option>
-<option value="leetEncryption">Text to Number Encryption (encode only)</option>
+<option value="leetEncryption">LEET Encryption (simplified) (encode only)</option>
 </select>
 <br><br>
 <textarea style="resize:none;" cols="70" rows="15" id="languageBase">
@@ -634,6 +634,24 @@ replaceFromText("Ę","3");
 replaceFromText("Ė","3");
 replaceFromText("Į","1");
 replaceFromText("Š","5");
+replaceFromText("b","8");
+replaceFromText("B","8");
+replaceFromText("f","7");
+replaceFromText("F","7");
+replaceFromText("j","7");
+replaceFromText("J","7");
+replaceFromText("z","2");
+replaceFromText("Z","2");
+replaceFromText("ž","2");
+replaceFromText("Ž","2");
+replaceFromText("x","8");
+replaceFromText("X","8");
+replaceFromText("h","4");
+replaceFromText("H","4");
+replaceFromText("r","12");
+replaceFromText("R","12");
+replaceFromText("n","11");
+replaceFromText("N","11");
 }
 }
 
