--- a/encryption/new_converter.html
+++ b/encryption/new_converter.html
@@ -35,7 +35,9 @@ body { text-align: center; color: black; background: white; font-family: Eurosti
 <option value="uniEliminatorEncryption">Unicode Eliminator (decode only)</option>
 <option value="hEncryption">Letter H converter (decode only)</option>
 <option value="ltModeEncryption">Lithuanian Accent Encryption</option>
-<option value="leetEncryption">LEET Encryption (simplified) (encode only)</option>
+<option value="leetEncryption">1337 Encryption (full version) (encode only)</option>
+<option value="leetEncryptionMin">1337 Encryption (minimal version) (encode only)</option>
+<option value="hexEncryption" disabled>HEX Encryption (encode only) (coming soon)</option>
 </select>
 <br><br>
 <textarea style="resize:none;" cols="70" rows="15" id="languageBase">
@@ -652,6 +654,41 @@ replaceFromText("r","12");
 replaceFromText("R","12");
 replaceFromText("n","11");
 replaceFromText("N","11");
+}
+
+if(document.getElementById("encryptionMode").value === "leetEncryptionMin"){
+replaceFromText("q","0");
+replaceFromText("e","3");
+replaceFromText("t","7");
+replaceFromText("i","1");
+replaceFromText("o","0");
+replaceFromText("a","4");
+replaceFromText("s","5");
+replaceFromText("g","9");
+replaceFromText("l","1");
+replaceFromText("c","3");
+replaceFromText("ą","4");
+replaceFromText("č","3");
+replaceFromText("ę","3");
+replaceFromText("ė","3");
+replaceFromText("į","1");
+replaceFromText("š","5");
+replaceFromText("Q","0");
+replaceFromText("E","3");
+replaceFromText("T","7");
+replaceFromText("I","1");
+replaceFromText("O","0");
+replaceFromText("A","4");
+replaceFromText("S","5");
+replaceFromText("G","9");
+replaceFromText("L","1");
+replaceFromText("C","3");
+replaceFromText("Ą","4");
+replaceFromText("Č","3");
+replaceFromText("Ę","3");
+replaceFromText("Ė","3");
+replaceFromText("Į","1");
+replaceFromText("Š","5");
 }
 }
 
@@ -1767,6 +1804,10 @@ replaceFromText("‘","'");
 }
 
 if(document.getElementById("encryptionMode").value === "leetEncryption"){
+alert("Decoding not supported!");
+}
+
+if(document.getElementById("encryptionMode").value === "leetEncryptionMin"){
 alert("Decoding not supported!");
 }
 }
